Set the platform thread kernel object name in PlatformThread::SetName().

In addition to registering the name with the global ThreadIdManager, the
platform thread object's name is set with zx_object_set_property(), so
that it will be reflected in logging from e.g. the platform's crash
handler.

Bug: 725726
Change-Id: Id47efa77857b35c2317b5eed05aa2e630a044113
Reviewed-on: https://chromium-review.googlesource.com/727699
Reviewed-by: Nico Weber <thakis@chromium.org>
Reviewed-by: Scott Graham <scottmg@chromium.org>
Commit-Queue: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510238}
Former-commit-id: 6124dadce4bd8c918cef7f7f7e5642faea83dac4