base/threading/platform_thread_fuchsia.cc
@@ -6,6 +6,7 @@
 
 #include <pthread.h>
 #include <sched.h>
+#include <zircon/syscalls.h>
 
 #include "base/threading/platform_thread_internal_posix.h"
 #include "base/threading/thread_id_name_manager.h"
@@ -49,8 +50,10 @@ size_t GetDefaultThreadStackSize(const pthread_attr_t& attributes) {
 
 // static
 void PlatformThread::SetName(const std::string& name) {
-  // TODO(fuchsia): There's no system-level API to communicate a thread name
-  // (for the debugger, etc.), so for now only set to our internal mechanisms.
+  zx_status_t status = zx_object_set_property(CurrentId(), ZX_PROP_NAME,
+                                              name.data(), name.size());
+  DCHECK_EQ(status, ZX_OK);
+
   ThreadIdNameManager::GetInstance()->SetName(PlatformThread::CurrentId(),
                                               name);
 }
